--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "tedder",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "automatic management of git branch for scrum",
   "main": "index.js",
   "scripts": {
     "test": "node ./bin/test.js"
+  },
+  "bin": {
+    "tedder": "./bin/tedder.js"
   },
   "keywords": [
     "tedder",
