--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-angular": "^7.0.1",
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.3.0",
+    "eslint-config-prettier": "^2.9.0",
     "husky": "^1.0.0-rc.9",
     "mocha": "^5.2.0",
     "prettier": "^1.14.0",
